# governance-program-library

./: .gitignore  .npmignore  Anchor.toml  TrezoaAnchor.toml  package.json  run-release.sh
.cargo/: audit.toml
.github/workflows/: lint-test.yaml
migrations/: deploy.ts
programs/bonk-plugin/: Cargo.toml
programs/bonk-plugin/idls/: tpl_token_staking.json
programs/bonk-plugin/src/: error.rs  lib.rs
programs/bonk-plugin/src/instructions/: create_registrar.rs  create_voter_weight_record.rs  update_voter_weight_record.rs
programs/bonk-plugin/src/state/: registrar.rs  stake_deposit_record.rs  voter_weight_record.rs
programs/bonk-plugin/src/utils/: stake_deposit_receipt.rs  stake_pool.rs
programs/bonk-plugin/tests/: create_registrar.rs  create_voter_weight_record.rs  update_voter_weight_record.rs
programs/bonk-plugin/tests/program_test/: bonk_plugin_test.rs  governance_test.rs  mod.rs  program_test_bench.rs  tools.rs  tpl_token_staking_test.rs
programs/gateway/: Cargo.toml
programs/gateway/src/: error.rs  lib.rs
programs/gateway/src/instructions/: configure_registrar.rs  create_registrar.rs  update_voter_weight_record.rs
programs/gateway/src/state/: generic_voter_weight.rs  registrar.rs  token_owner_record.rs  voter_weight_record.rs
programs/gateway/tests/: configure_registrar.rs  create_registrar.rs  create_voter_weight_record.rs  update_voter_weight_record_predecessor_plugin.rs  update_voter_weight_record_token_deposit.rs
programs/gateway/tests/program_test/: gateway_voter_test.rs  governance_test.rs  predecessor_plugin_test.rs  program_test_bench.rs  tools.rs
programs/nft-voter/: Cargo.toml
programs/nft-voter/src/: error.rs  lib.rs
programs/nft-voter/src/instructions/: cast_nft_vote.rs  configure_collection.rs  create_max_voter_weight_record.rs  create_registrar.rs  create_voter_weight_record.rs  relinquish_nft_vote.rs  update_voter_weight_record.rs
programs/nft-voter/src/state/: collection_config.rs  idl_types.rs  max_voter_weight_record.rs  nft_vote_record.rs  registrar.rs  voter_weight_record.rs
programs/nft-voter/src/tools/: governance.rs  mod.rs  token_metadata.rs  tpl_token.rs
programs/nft-voter/tests/: cast_nft_vote.rs  configure_collection.rs  create_max_voter_weight_record.rs  create_registrar.rs  create_voter_weight_record.rs  relinquish_nft_vote.rs  update_voter_weight_record.rs
programs/nft-voter/tests/program_test/: governance_test.rs  nft_voter_test.rs  program_test_bench.rs  token_metadata_test.rs  tools.rs
programs/quadratic/: Cargo.toml
programs/quadratic/src/: error.rs  lib.rs
programs/quadratic/src/instructions/: configure_registrar.rs  create_registrar.rs  create_voter_weight_record.rs  (+1 more)
programs/quadratic/tests/: configure_registrar.rs  create_registrar.rs  create_voter_weight_record.rs  update_voter_weight_record_predecessor_plugin.rs  update_voter_weight_record_token_deposit.rs
programs/realm-voter/: Cargo.toml
programs/realm-voter/src/: error.rs  lib.rs
programs/realm-voter/src/instructions/: configure_governance_program.rs  configure_voter_weights.rs  create_max_voter_weight_record.rs  create_registrar.rs  update_voter_weight_record.rs
programs/realm-voter/src/state/: governance_program_config.rs  max_voter_weight_record.rs  registrar.rs  voter_weight_record.rs
programs/realm-voter/tests/: configure_governance_program.rs  configure_voter_weights.rs  create_max_voter_weight_record.rs  create_registrar.rs  create_voter_weight_record.rs  update_voter_weight_record.rs
programs/realm-voter/tests/program_test/: governance_test.rs  program_test_bench.rs  realm_voter_test.rs  tools.rs
programs/shared/: Cargo.toml
programs/shared/src/: compose.rs  error.rs  generic_max_voter_weight.rs  generic_voter_weight.rs  mint.rs  token_owner_record.rs
programs/token-haver/: Cargo.toml
programs/token-haver/.tests/: configure_mints.rs  create_registrar.rs  create_voter_weight_record.rs  update_voter_weight_record.rs
programs/token-haver/.tests/program_test/: token_haver_test.rs  tools.rs
programs/token-haver/src/: error.rs  lib.rs
programs/token-haver/src/instructions/: configure_mints.rs  create_registrar.rs  update_voter_weight_record.rs
programs/token-haver/src/state/: max_voter_weight_record.rs  registrar.rs  voter_weight_record.rs
programs/token-voter/: Cargo.toml
programs/token-voter/src/: error.rs  governance.rs  lib.rs
programs/token-voter/src/instructions/: close_voter.rs  configure_mint_config.rs  create_max_voter_weight_record.rs  create_registrar.rs  create_voter_weight_record.rs  deposit.rs  resize_registrar.rs  withdraw.rs
programs/token-voter/src/state/: deposit_entry.rs  registrar.rs  voter.rs  voting_mint_config.rs
programs/token-voter/src/tools/: mod.rs  tpl_token.rs
programs/token-voter/tests/: cast_token_vote.rs  close_voter.rs  configure_voter_weights.rs  create_max_voter_weight_record.rs  create_registrar.rs  deposit.rs  resize_registrar.rs  withdraw.rs
programs/token-voter/tests/program_test/: governance_test.rs  mod.rs  program_test_bench.rs  token_voter_test.rs  tools.rs
scripts/: getQuadraticVoterWeight.ts  updateVoterWeightRecord.ts
scripts/utils/: common.ts  constants.ts  plugin.ts
src/common/: Client.ts  types.ts
src/gateway/: client.ts  gateway.json  gateway.ts
src/nftVoter/: client.ts  nft_voter.json  nft_voter.ts
src/quadraticVoter/: client.ts  quadratic.json  quadratic.ts
src/realmVoter/: client.ts  realm_voter.json  realm_voter.ts
src/tokenHaver/: client.ts  token_haver.json  token_haver.ts
src/tokenVoter/: client.ts  token_voter.json  token_voter.ts
tests/: nft-voter.ts
tests/bonk-plugin/: stake-idl.ts  test.ts
tests/token-voter/: test.ts
(+8 files in other folders)
