[package]
name = "gpl-nft-voter"
version = "0.2.2"
description = "TPL Governance addin implementing NFT based governance"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_nft_voter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["trezoaanchor-lang/idl-build", "anchor-tpl/idl-build"]

[dependencies]
arrayref = "0.3.6"
trezoaanchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-tpl = { version = "0.30.1", features = ["token"] }
itertools = "0.10.2"
mpl-token-metadata = "^4.1.2"
trezoa-program = "1.18.18"
tpl-governance = { version = "4.0", features = ["no-entrypoint"] }
tpl-governance-tools =  "0.1.4"
tpl-token = { version = "4.0", features = [ "no-entrypoint" ] }

[dev-dependencies]
borsh = "0.10.3"
trezoa-sdk = "1.18.18"
trezoa-program-test = "1.18.18"
