[package]
name = "gpl-realm-voter"
version = "0.0.1"
description = "TPL Governance plugin granting governance power through Realms membership"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_realm_voter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["trezoaanchor-lang/idl-build", "anchor-tpl/idl-build"]

[dependencies]
arrayref = "0.3.6"
trezoaanchor-lang = { version = "0.30.1" }
anchor-tpl = "0.30.1"
trezoa-program = "1.18.18"
tpl-governance = { version = "4.0", features = ["no-entrypoint"] }
tpl-governance-tools = "0.1.4"
tpl-token = { version = "4.0.0", features = [ "no-entrypoint" ] }

[dev-dependencies]
borsh = "0.10.3"
trezoa-sdk = "1.18.18"
trezoa-program-test = "1.18.18"
