[package]
name = "gpl-shared"
version = "0.1.1"
description = "TPL Governance plugin shared code"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_shared"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
trezoaanchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
enum_dispatch = "0.3.8"
num-derive = "0.4.1"
num-traits = "0.2"
tpl-governance = { version = "4.0", features = ["no-entrypoint"] }
tpl-governance-tools =  "0.1.4"
tpl-governance-addin-api = "0.1.4"
tpl-token = { version = "4.0.0", features = [ "no-entrypoint" ] }

[dev-dependencies]